تمرین دادن روی اعداد و کلمات با ۶ فونت

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,21 @@ digest.txt
 .continue/docs/new-doc.yaml
 models/tps_persian_cdistnet_128_36/20260105-09*
 models/tps_persian_cdistnet_128_36/20260105-10:32/events.out.tfevents.1767596540.mohammadsaleh-ai-server
+dataset/numbers
+dataset/a
+models/tps_persian_cdistnet_128_36/20260105-10:30/events.out.tfevents.1767596442.mohammadsaleh-ai-server
+models/tps_persian_cdistnet_128_36/20260105-10:31/events.out.tfevents.1767596471.mohammadsaleh-ai-server
+models/tps_persian_cdistnet_128_36/model_epoch_7.pth
+models/tps_persian_cdistnet_128_36/model_epoch_6.pth
+.gitignore
+models/tps_persian_cdistnet_128_36/epoch6_best_acc.pth
+.gitignore
+models/tps_persian_cdistnet_128_36/epoch1_best_acc.pth
+models/tps_persian_cdistnet_128_36/epoch5_best_acc.pth
+models/tps_persian_cdistnet_128_36/epoch4_best_acc.pth
+.gitignore
+models/tps_persian_cdistnet_128_36/epoch2_best_acc.pth
+models/tps_persian_cdistnet_128_36/epoch7_best_acc.pth
+models/tps_persian_cdistnet_128_36/epoch0_best_acc.pth
+models/6_font_tps_persian_cdistnet_128_36/epoch0_best_acc.pth
+models/tps_persian_cdistnet_128_36/
